Fix body padding on smaller sizes

--- a/src/css/slor/_base.pcss
+++ b/src/css/slor/_base.pcss
@@ -11,9 +11,9 @@ body {
   font-size: var(--font-size-body);
   line-height: calc(var(--baseline) * 2);
   letter-spacing: 0.04rem;
-  padding-top: 2vmax 3vw;
-  padding-left: 2vmax 3vw;
-  padding-right: 2vmax 3vw;
+  padding-top: 2vmax;
+  padding-left: 3vw;
+  padding-right: 3vw;
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
